trying to fix ugly scrollbar

--- a/riddler/src/assets/global.css
+++ b/riddler/src/assets/global.css
@@ -73,6 +73,12 @@ strong {
   box-sizing: border-box;
   font-family: var(--text-font);
   font-weight: 600;
+  scrollbar-width: none; /* Firefox */
+  -ms-overflow-style: none;  /* Internet Explorer 10+ */
+}
+body::-webkit-scrollbar { /* WebKit */
+  width: 0;
+  height: 0;
 }
 button, input, svg {
   cursor: pointer;
